# agentshield-rs

./: .env.example  Cargo.toml  README.md
config/: facilitator.base-sepolia.json
examples/: erc20_transfer_unknown_recipient.json  safe_native_transfer.json  unknown_contract_call.json  unlimited_approval_unknown_spender.json
prompts/: 01_safe_native_transfer.txt  02_erc20_transfer_unknown_recipient.txt  03_unknown_contract_call.txt  04_unlimited_approval_unknown_spender.txt
scripts/: install_facilitator.sh  run_examples.sh  run_facilitator.sh  test_x402_unpaid.sh
src/: decoder.rs  handlers.rs  lib.rs  main.rs  registry.rs  risk.rs  types.rs
tests/: analyze_api.rs
