[package]
name = "agentshield-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = { version = "1", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

[[bin]]
name = "agentshield-mcp"
path = "src/bin/agentshield-mcp.rs"
