[package]
name = "agentshield-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-io", "schemars"] }
schemars = { version = "1", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.13", features = ["json", "rustls"] }
dotenvy = "0.15"

x402-axum = "1.4.6"
x402-types = "1.4.6"
x402-chain-eip155 = { version = "1.4.6", features = ["server", "client"] }
x402-reqwest = "1.4.6"

alloy-primitives = "1.4.1"
alloy-signer-local = "1.0"

[[bin]]
name = "agentshield-mcp"
path = "src/bin/agentshield-mcp.rs"

[[bin]]
name = "x402-client-demo"
path = "src/bin/x402-client-demo.rs"
